[package]
name = "my-postgres-patterns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
insert-if-not-exists-on-background = []

[dependencies]
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-telemetry = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-postgres = { tag = "0.2.5", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-logs-and-telemetry",
    "with-tls",
] }

my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }

tokio = { version = "*" }
async-trait = "*"
